Extract token and email as query string parameters